--- a/frontend/cve_pages/pinecone_4.0.0.html
+++ b/frontend/cve_pages/pinecone_4.0.0.html
@@ -223,7 +223,7 @@ NOTICE: <span class="ltredbold">Support for the legacy CVE download formats <a h
 <h2>Search Results</h2>
 
 <div class="smaller" style="background-color:#e0dbd2; padding:3px; border:1px solid #706c60; margin-bottom:10px">
-There are <b>591</b> CVE Records that match your search.
+There are <b>594</b> CVE Records that match your search.
 </div>
 
 <div id="TableWithRules">
@@ -247,6 +247,18 @@ There are <b>591</b> CVE Records that match your search.
 </td>
 	</tr>
 	<tr>
+		<td valign="top" nowrap="nowrap"><a href="/cgi-bin/cvename.cgi?name=CVE-2024-40629">CVE-2024-40629</a></td>
+		<td valign="top">JumpServer is an open-source Privileged Access Management (PAM) tool that provides DevOps and IT teams with on-demand and secure access to SSH, RDP, Kubernetes, Database and RemoteApp endpoints through a web browser. An attacker can exploit the Ansible playbook to write arbitrary files, leading to remote code execution (RCE) in the Celery container. The Celery container runs as root and has database access, allowing an attacker to steal all secrets for hosts, create a new JumpServer account with admin privileges, or manipulate the database in other ways. This issue has been patched in release versions 3.10.12 and 4.0.0. It is recommended to upgrade the safe versions. There are no known workarounds for this vulnerability.
+
+</td>
+	</tr>
+	<tr>
+		<td valign="top" nowrap="nowrap"><a href="/cgi-bin/cvename.cgi?name=CVE-2024-40628">CVE-2024-40628</a></td>
+		<td valign="top">JumpServer is an open-source Privileged Access Management (PAM) tool that provides DevOps and IT teams with on-demand and secure access to SSH, RDP, Kubernetes, Database and RemoteApp endpoints through a web browser. An attacker can exploit the ansible playbook to read arbitrary files in the celery container, leading to sensitive information disclosure. The Celery container runs as root and has database access, allowing the attacker to steal all secrets for hosts, create a new JumpServer account with admin privileges, or manipulate the database in other ways. This issue has been addressed in release versions 3.10.12 and 4.0.0. It is recommended to upgrade the safe versions. There is no known workarounds for this vulnerability.
+
+</td>
+	</tr>
+	<tr>
 		<td valign="top" nowrap="nowrap"><a href="/cgi-bin/cvename.cgi?name=CVE-2024-4014">CVE-2024-4014</a></td>
 		<td valign="top">The hCaptcha for WordPress plugin for WordPress is vulnerable to Stored Cross-Site Scripting via the plugin's cf7-hcaptcha shortcode in all versions up to, and including, 4.0.0 due to insufficient input sanitization and output escaping on user supplied attributes. This makes it possible for authenticated attackers, with contributor-level access and above, to inject arbitrary web scripts in pages that will execute whenever a user accesses an injected page.
 
@@ -261,6 +273,12 @@ There are <b>591</b> CVE Records that match your search.
 	<tr>
 		<td valign="top" nowrap="nowrap"><a href="/cgi-bin/cvename.cgi?name=CVE-2024-37886">CVE-2024-37886</a></td>
 		<td valign="top">user_oidc app is an OpenID Connect user backend for Nextcloud. An attacker could potentially trick the app into accepting a request that is not signed by the correct server. It is recommended that the Nextcloud user_oidc app is upgraded to 1.3.5, 2.0.0, 3.0.0, 4.0.0 or 5.0.0.
+
+</td>
+	</tr>
+	<tr>
+		<td valign="top" nowrap="nowrap"><a href="/cgi-bin/cvename.cgi?name=CVE-2024-37386">CVE-2024-37386</a></td>
+		<td valign="top">An issue was discovered in Stormshield Network Security (SNS) 4.0.0 through 4.3.25, 4.4.0 through 4.7.5, and 4.8.0. Certain manipulations allow restarting in single-user mode despite the activation of secure boot. The following versions fix this: 4.3.27, 4.7.6, and 4.8.1.
 
 </td>
 	</tr>
