--- a/frontend/cve_pages/pinecone_4.0.0.html
+++ b/frontend/cve_pages/pinecone_4.0.0.html
@@ -223,7 +223,7 @@ NOTICE: <span class="ltredbold">Support for the legacy CVE download formats <a h
 <h2>Search Results</h2>
 
 <div class="smaller" style="background-color:#e0dbd2; padding:3px; border:1px solid #706c60; margin-bottom:10px">
-There are <b>594</b> CVE Records that match your search.
+There are <b>595</b> CVE Records that match your search.
 </div>
 
 <div id="TableWithRules">
@@ -273,6 +273,12 @@ There are <b>594</b> CVE Records that match your search.
 	<tr>
 		<td valign="top" nowrap="nowrap"><a href="/cgi-bin/cvename.cgi?name=CVE-2024-37886">CVE-2024-37886</a></td>
 		<td valign="top">user_oidc app is an OpenID Connect user backend for Nextcloud. An attacker could potentially trick the app into accepting a request that is not signed by the correct server. It is recommended that the Nextcloud user_oidc app is upgraded to 1.3.5, 2.0.0, 3.0.0, 4.0.0 or 5.0.0.
+
+</td>
+	</tr>
+	<tr>
+		<td valign="top" nowrap="nowrap"><a href="/cgi-bin/cvename.cgi?name=CVE-2024-37549">CVE-2024-37549</a></td>
+		<td valign="top">Improper Neutralization of Input During Web Page Generation (XSS or 'Cross-site Scripting') vulnerability in Pdfcrowd Save as PDF plugin by Pdfcrowd allows Stored XSS.This issue affects Save as PDF plugin by Pdfcrowd: from n/a through 4.0.0.
 
 </td>
 	</tr>
